mineral_detection_using_yolov8m.ipynb

--- a/mineral_detection_using_yolov8m.ipynb
+++ b/mineral_detection_using_yolov8m.ipynb
@@ -86,8 +86,8 @@
         "!pip install roboflow\n",
         "\n",
         "from roboflow import Roboflow\n",
-        "rf = Roboflow(api_key=\"JuCC4l6nLU65FOYvUgcV\")\n",
-        "project = rf.workspace(\"wayamba-university-xq6e5\").project(\"mineral-identification-870uk\")\n",
+        "rf = Roboflow(api_key=\"abcdefeeghijklmn\")\n",
+        "project = rf.workspace(\"adeghjkl;lkjhgfds\").project(\"mineral-identification-870uk\")\n",
         "version = project.version(8)\n",
         "dataset = version.download(\"yolov8\")\n",
         "\n",
